--- a/style.css
+++ b/style.css
@@ -44,6 +44,11 @@ h1 {
 h2 {
     margin-top: 0;
 }
+.lang-link {
+    font-size: 0.8rem;
+    padding: 0 0.5rem 0.8rem;
+    display: inline-block;
+}
 
 ol {
     list-style: none;
